start Multi-Language

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-i18next-multi-language-demo",
+  "name": "multi-language",
   "version": "0.1.0",
   "private": true,
   "scripts": {
